# lections_cpp

./: 1901A.cpp  1929_leetcode.cpp  CMakeLists.txt
codeforces/: 1883A.cpp  1895A.cpp
mesherin/: 1.cpp  4_lection_ternar_switch.cpp
mesherin/12 lection/: oop.cpp
mesherin/13 lection/: friends.cpp
mesherin/1_lection/: 1_lection.cpp
mesherin/5_lection/: 5_lection_errors.cpp
mesherin/6_lection/: 6_pointers.cpp
mesherin/7_lection/: 7_memory.cpp
mesherin/8_lection/: 8_arr.cpp
mesherin/9_lection/: 9_links.cpp
mesherin/git/: git_introduction.cpp
yandex_algos/algos2/: 2C.cpp
yandex_algos/algos_1_0/training 1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
yandex_algos/algos_2_0_B/: 2A.cpp  2B.cpp  2C.cpp
