cmake_minimum_required(VERSION 3.26.4)
project(lections_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(mesherin mesherin/1.cpp)
add_executable(4_lection mesherin/4_lection_ternar_switch.cpp)
add_executable(5_lection mesherin/5_lection/5_lection_errors.cpp)
add_executable(6_lection mesherin/6_lection/6_pointers.cpp)
add_executable(7_lection mesherin/7_lection/7_memory.cpp)
add_executable(8_lection mesherin/8_lection/8_arr.cpp)
add_executable(9_lection mesherin/9_lection/9_links.cpp)
