cmake_minimum_required(VERSION 3.26.4)
project(lections_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(mesherin mesherin/1.cpp)
add_executable(4_lection mesherin/4_lection_ternar_switch.cpp)
add_executable(5_lection mesherin/5_lection/5_lection_errors.cpp)
add_executable(6_lection mesherin/6_lection/6_pointers.cpp)
add_executable(7_lection mesherin/7_lection/7_memory.cpp)
add_executable(8_lection mesherin/8_lection/8_arr.cpp)
add_executable(9_lection mesherin/9_lection/9_links.cpp)
add_executable(A "yandex_algos/algos_1_0/training 1/A.cpp")
add_executable(B "yandex_algos/algos_1_0/training 1/B.cpp")
add_executable(D "yandex_algos/algos_1_0/training 1/D.cpp")
add_executable(1895A codeforces/1895A.cpp)
add_executable(1883A codeforces/1883A.cpp)
add_executable(E "yandex_algos/algos_1_0/training 1/E.cpp")
add_executable(G "yandex_algos/algos_1_0/training 1/G.cpp")
add_executable(2A "yandex_algos/algos_2_0_B/2A.cpp")
add_executable(2B "yandex_algos/algos_2_0_B/2B.cpp")
add_executable(2C "yandex_algos/algos_2_0_B/2C.cpp")
add_executable(git "mesherin/git/git_introduction.cpp")
add_executable(oop "mesherin/12 lection/oop.cpp")
add_executable(friends "mesherin/13 lection/friends.cpp")


